<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.PixFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_white">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/pix"
        android:textSize="@dimen/thirty_dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/pix_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sixty_dp"
                android:orientation="horizontal"
                android:padding="@dimen/five_dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_error2"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/ten_dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pix_transfer"
                    android:textSize="@dimen/fifteen_sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/twenty_dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_arrow_up"
                    android:rotation="90"
                    android:layout_marginStart="@dimen/two_hundred_dp"/>
            </LinearLayout>
            <View
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="346dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sixty_dp"
                android:orientation="horizontal"
                android:padding="@dimen/five_dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_error2"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/ten_dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pix_transfer"
                    android:textSize="@dimen/fifteen_sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/twenty_dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_arrow_up"
                    android:rotation="90"
                    android:layout_marginStart="@dimen/two_hundred_dp"/>
            </LinearLayout>
            <View
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="346dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sixty_dp"
                android:orientation="horizontal"
                android:padding="@dimen/five_dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_error2"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/ten_dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pix_transfer"
                    android:textSize="@dimen/fifteen_sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/twenty_dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_arrow_up"
                    android:rotation="90"
                    android:layout_marginStart="@dimen/two_hundred_dp"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>